--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,6 +16,11 @@
       <div class="col-start-3 col-span-2">
         <%- include('header.ejs') %>
         <h6 class="py-4">Login to your account</h6>
+        <% if(messages && messages.error && messages.error.length > 0)  { %>
+          <% for(var i=0; i<messages.error.length; i++) { %>
+                  <li> <%= messages.error[i] %></li>
+          <% } %>
+        <% } %>
         <form action="/session" method="post">
           <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <div class="py-3">
